Bug 286848 - Every time i start "Minecraft" (java application) the plasma-destkop crashes
Summary: Every time i start "Minecraft" (java application) the plasma-destkop crashes
Status: CLOSED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-17 13:53 UTC by Michael
Modified: 2011-12-07 12:16 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael 2011-11-17 13:53:20 UTC
Application: plasma-desktop (0.4)
KDE Platform Version: 4.7.3 (4.7.3) (Compiled from sources)
Qt Version: 4.7.4
Operating System: Linux 3.1.0-rc6+ x86_64
Distribution: "Gentoo Base System release 2.1"

-- Information about the crash:
Hi everyone

- What I was doing when the application crashed:
I started minecraft using the konsole using java. When the "login window" starts to show, plasma-desktop crashes and everytime i try to restart it then, it crashes to. After closing Minecraft, i can start plasma-desktop again.

Thanks for your work,
Michael

The crash can be reproduced every time.

-- Backtrace:
Application: Plasma Desktop Shell (kdeinit4), signal: Aborted
[Current thread is 1 (Thread 0x7f583c367760 (LWP 3856))]

Thread 3 (Thread 0x7f5816ac3700 (LWP 3876)):
#0  0x00007f583aba3364 in __pthread_mutex_lock (mutex=0x19501e8) at pthread_mutex_lock.c:61
#1  0x00007f58366e2778 in g_main_context_poll (n_fds=1, fds=0x1950f50, timeout=-1, context=0x19501e0, priority=<optimized out>) at gmain.c:3397
#2  g_main_context_iterate (context=0x19501e0, block=1, dispatch=1, self=<optimized out>) at gmain.c:3084
#3  0x00007f58366e2c81 in g_main_context_iteration (context=0x19501e0, may_block=1) at gmain.c:3152
#4  0x00007f583af44a66 in QEventDispatcherGlib::processEvents (this=0x18d5720, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#5  0x00007f583af18d62 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f583af18fac in QEventLoop::exec (this=0x7f5816ac2de0, flags=...) at kernel/qeventloop.cpp:201
#7  0x00007f583ae2e794 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#8  0x00007f583aefa7d8 in QInotifyFileSystemWatcherEngine::run (this=0x194dcd0) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007f583ae30ff5 in QThreadPrivate::start (arg=0x194dcd0) at thread/qthread_unix.cpp:331
#10 0x00007f583aba0d4c in start_thread (arg=0x7f5816ac3700) at pthread_create.c:301
#11 0x00007f583994158d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 2 (Thread 0x7f5816080700 (LWP 3877)):
#0  pthread_cond_wait () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007f582e51db34 in QTWTF::TCMalloc_PageHeap::scavengerThread (this=0x7f582e838180) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:2359
#2  0x00007f582e51db69 in QTWTF::TCMalloc_PageHeap::runScavengerThread (context=0x7f582e846254) at ../3rdparty/javascriptcore/JavaScriptCore/wtf/FastMalloc.cpp:1464
#3  0x00007f583aba0d4c in start_thread (arg=0x7f5816080700) at pthread_create.c:301
#4  0x00007f583994158d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:115

Thread 1 (Thread 0x7f583c367760 (LWP 3856)):
[KCrash Handler]
#6  0x00007f583989c945 in *__GI_raise (sig=<optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#7  0x00007f583989ddc6 in *__GI_abort () at abort.c:92
#8  0x00007f583ae27a04 in qt_message_output (msgType=<optimized out>, buf=<optimized out>) at global/qglobal.cpp:2291
#9  0x00007f583ae27b9d in qt_message(QtMsgType, const char *, typedef __va_list_tag __va_list_tag *) (msgType=QtFatalMsg, msg=0x7f583af78e88 "ASSERT: \"%s\" in file %s, line %d", ap=0x7fff3e527360) at global/qglobal.cpp:2337
#10 0x00007f583ae27d39 in qFatal (msg=<optimized out>) at global/qglobal.cpp:2520
#11 0x00007f58223cc628 in KSysGuard::ProcessesLocal::getParentPid (this=0x24074b0, pid=0) at /var/tmp/portage/kde-base/ksysguard-9999/work/ksysguard-9999/libs/ksysguard/processcore/processes_linux_p.cpp:188
#12 0x00007f58223c8b32 in KSysGuard::Processes::updateOrAddProcess (this=0x7fff3e527580, pid=0) at /var/tmp/portage/kde-base/ksysguard-9999/work/ksysguard-9999/libs/ksysguard/processcore/processes.cpp:291
#13 0x00007f5822aa76c8 in TaskManager::getServicesViaPid (pid=0) at /var/tmp/portage/kde-base/libtaskmanager-9999/work/libtaskmanager-9999/libs/taskmanager/taskitem.cpp:433
#14 0x00007f5822aa96d1 in TaskManager::TaskItem::launcherUrl (this=0xcf3270) at /var/tmp/portage/kde-base/libtaskmanager-9999/work/libtaskmanager-9999/libs/taskmanager/taskitem.cpp:612
#15 0x00007f5822a92c84 in TaskManager::LauncherItem::associateItemIfMatches (this=0x1203e60, item=0xcf3270) at /var/tmp/portage/kde-base/libtaskmanager-9999/work/libtaskmanager-9999/libs/taskmanager/launcheritem.cpp:89
#16 0x00007f5822a8a87c in TaskManager::GroupManagerPrivate::addTask (this=0x11780c0, task=...) at /var/tmp/portage/kde-base/libtaskmanager-9999/work/libtaskmanager-9999/libs/taskmanager/groupmanager.cpp:340
#17 0x00007f5822a8bcae in TaskManager::GroupManager::qt_metacall (this=0x1177490, _c=<optimized out>, _id=10, _a=0x7fff3e5282e0) at /var/tmp/portage/kde-base/libtaskmanager-9999/work/libtaskmanager-9999_build/libs/taskmanager/groupmanager.moc:113
#18 0x00007f583af2e22f in QMetaObject::activate (sender=0x1173b60, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff3e5282e0) at kernel/qobject.cpp:3278
#19 0x00007f5822aaa292 in TaskManager::TaskManager::taskAdded (this=<optimized out>, _t1=<optimized out>) at /var/tmp/portage/kde-base/libtaskmanager-9999/work/libtaskmanager-9999_build/libs/taskmanager/taskmanager.moc:174
#20 0x00007f5822aab829 in TaskManager::TaskManager::windowAdded (this=0x1173b60, w=54525956) at /var/tmp/portage/kde-base/libtaskmanager-9999/work/libtaskmanager-9999/libs/taskmanager/taskmanager.cpp:292
#21 0x00007f5822aac23f in TaskManager::TaskManager::qt_metacall (this=0x1173b60, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0x7fff3e5285e0) at /var/tmp/portage/kde-base/libtaskmanager-9999/work/libtaskmanager-9999_build/libs/taskmanager/taskmanager.moc:126
#22 0x00007f583af2e22f in QMetaObject::activate (sender=0xd4eca0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff3e5285e0) at kernel/qobject.cpp:3278
#23 0x00007f583be07302 in KWindowSystem::windowAdded (this=<optimized out>, _t1=54525956) at /var/tmp/portage/kde-base/kdelibs-4.7.49.9999/work/kdelibs-4.7.49.9999_build/kdeui/kwindowsystem.moc:129
#24 0x00007f583be0868a in KWindowSystemPrivate::addClient (this=0xdf9ae0, w=54525956) at /var/tmp/portage/kde-base/kdelibs-4.7.49.9999/work/kdelibs-4.7.49.9999/kdeui/windowmanagement/kwindowsystem_x11.cpp:269
#25 0x00007f583be15797 in NETRootInfo::update (this=0xdf9b08, dirty_props=<optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.7.49.9999/work/kdelibs-4.7.49.9999/kdeui/windowmanagement/netwm.cpp:2227
#26 0x00007f583be164d3 in NETRootInfo::event (this=0xdf9b08, event=0x7fff3e528a70, properties=0x7fff3e528890, properties_size=5) at /var/tmp/portage/kde-base/kdelibs-4.7.49.9999/work/kdelibs-4.7.49.9999/kdeui/windowmanagement/netwm.cpp:2099
#27 0x00007f583be0a3b4 in KWindowSystemPrivate::x11Event (this=0xdf9ae0, ev=0x7fff3e528a70) at /var/tmp/portage/kde-base/kdelibs-4.7.49.9999/work/kdelibs-4.7.49.9999/kdeui/windowmanagement/kwindowsystem_x11.cpp:172
#28 0x00007f583bd05f27 in KSystemEventFilterPrivate::filterEvent (this=0xdfaa10, message=0x7fff3e528a70) at /var/tmp/portage/kde-base/kdelibs-4.7.49.9999/work/kdelibs-4.7.49.9999/kdeui/kernel/ksystemeventfilter.cpp:102
#29 0x00007f583a17224a in x11EventSourceDispatch (s=0xc955a0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:143
#30 0x00007f58366e229f in g_main_dispatch (context=0xc95040) at gmain.c:2441
#31 g_main_context_dispatch (context=0xc95040) at gmain.c:3011
#32 0x00007f58366e2aa8 in g_main_context_iterate (context=0xc95040, block=1, dispatch=1, self=<optimized out>) at gmain.c:3089
#33 0x00007f58366e2c81 in g_main_context_iteration (context=0xc95040, may_block=1) at gmain.c:3152
#34 0x00007f583af44a0f in QEventDispatcherGlib::processEvents (this=0xc92710, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#35 0x00007f583a171f8e in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#36 0x00007f583af18d62 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#37 0x00007f583af18fac in QEventLoop::exec (this=0x7fff3e528d70, flags=...) at kernel/qeventloop.cpp:201
#38 0x00007f583af1d43b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#39 0x00007f5828d1d182 in kdemain (argc=1, argv=0xc1cc20) at /var/tmp/portage/kde-base/plasma-workspace-9999/work/plasma-workspace-9999/plasma/desktop/shell/main.cpp:120
#40 0x0000000000407d7a in launch (argc=<optimized out>, _name=0xc2a6b8 "/usr/bin/plasma-desktop", args=<optimized out>, cwd=0x0, envc=0, envs=<optimized out>, reset_env=false, tty=0x0, avoid_loops=false, startup_id_str=0x40c441 "0") at /var/tmp/portage/kde-base/kdelibs-4.7.49.9999/work/kdelibs-4.7.49.9999/kinit/kinit.cpp:734
#41 0x0000000000408a4b in handle_launcher_request (sock=<optimized out>, who=<optimized out>) at /var/tmp/portage/kde-base/kdelibs-4.7.49.9999/work/kdelibs-4.7.49.9999/kinit/kinit.cpp:1226
#42 0x0000000000408f32 in handle_requests (waitForPid=0) at /var/tmp/portage/kde-base/kdelibs-4.7.49.9999/work/kdelibs-4.7.49.9999/kinit/kinit.cpp:1419
#43 0x0000000000409828 in main (argc=2, argv=0x7fff3e529c18, envp=0x7fff3e529c30) at /var/tmp/portage/kde-base/kdelibs-4.7.49.9999/work/kdelibs-4.7.49.9999/kinit/kinit.cpp:1907

This bug may be a duplicate of or related to bug 285863.

Possible duplicates by query: bug 285863.

Reported using DrKonqi
Comment 1 John Tapsell 2011-12-04 07:55:27 UTC
Probably fixed by:

commit 30dd86d2e18541c6129b9fa974f54e3858b8bdf8
Author: John Tapsell <john.tapsell.ext@basyskom.de>
Date:   Thu Nov 24 14:52:45 2011 +0000

    Fix crash if someone calls update with a pid of 0 or -1
    
    BUG: 286848
Comment 2 Michael 2011-12-07 12:16:48 UTC
Yep, that seems to be fixed :)

Thanks for your help!

Michael