Fix crash if someone calls update with a pid of 0 or -1

BUG: 286848